# 6502-homebrew-computer

./: .gitignore
Arduino/6502_8bit_display/: 6502_8bit_display.ino  readme.txt
Arduino/6502_8bit_display/6502_8bit_display/: 6502_8bit_display.ino
Arduino/6502_monitor/: 6502_monitor.ino  readme.txt
Arduino/Archive/data_monitor/: data_monitor.ino
Arduino/Archive/state_change_analyzer/: state_change_analyzer.ino
Arduino/clock_framecount_monitor/: clock_framecount_monitor.ino
Code/AVRDUDE/: read-fuses-atmega328p.sh
Code/Emulator/: CMakeLists.txt  Makefile
Code/Emulator/lib/SDL2_image/cmake/SDL2_image/: sdl2_image-config.cmake
Code/Emulator/lib/SDL2_image/pkgconfig/: SDL2_image.pc
Code/Emulator/source/: Bus.cpp  main.cpp
Code/Emulator/src/: main.cpp
Projects/ATMega328p Fuses/: reset-internal-clock-atmega328p.sh  set-internal-clock-atmega328p.sh
Projects/Battery Pack Load/battery_pack_load/: battery_pack_load.kicad_prl  battery_pack_load.kicad_pro  battery_pack_load.kicad_sch
Projects/Emulator/: CMakeLists.txt
Projects/Emulator/include/: Bus.h  CPU.h  Device.h  InstructionSet.h  MOS6502.h  Ram.h  System.h
Projects/Emulator/source/: Bus.cpp  Bus.h  CPU.cpp  Device.cpp  InstructionSet.cpp  MOS6502.cpp  Ram.cpp  System.cpp  main.cpp
Schematics/8bit-address-display/: 8bit-address-display.kicad_pro  8bit-address-display.kicad_sch
Schematics/arduino-programmer/: arduino-programmer.kicad_pro  arduino-programmer.kicad_sch
Schematics/clock/: clock.kicad_pro  clock.kicad_sch
Software/Cable Matters RS232 USB 2.0 Adapter/: Website.txt
(+25 files in other folders)
